--- a/Frontend/my-app/src/Styles/Profile.css
+++ b/Frontend/my-app/src/Styles/Profile.css
@@ -38,10 +38,10 @@
     display: flex;
     flex-direction: column;
     }
-  input[type="file"] {
+  /* input[type="file"] {
     display: none;
   }
-  
+   */
   .custom-file-upload {
     border-radius: 50%;
     display: inline-block;
