--- a/Frontend/my-app/src/Styles/UserNavbar.css
+++ b/Frontend/my-app/src/Styles/UserNavbar.css
@@ -59,5 +59,8 @@
 
 }
 
+.search-inp{
+  margin-top: -34% !important;
+}
 /* linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1));
    */
